--- a/framelesswindow.ui
+++ b/framelesswindow.ui
@@ -18,19 +18,26 @@
     <number>0</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="bottomMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <item>
     <widget class="QWidget" name="widget_WindowFrame" native="true">
+     <property name="styleSheet">
+      <string notr="true">#widget_WindowFrame
+{
+background-color: rgb(212, 212, 212);
+}
+</string>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
        <number>0</number>
@@ -58,9 +65,9 @@
         <property name="styleSheet">
          <string notr="true">#widget_TitleBar
 {
-	border: 0px none palette(base);
-	height:20px;
-	background-color: rgb(49, 54, 59);
+border: 0px none palette(base);
+height:22px;
+background-color: rgb(49, 54, 59);
 }</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
@@ -68,31 +75,55 @@
           <number>0</number>
          </property>
          <property name="leftMargin">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="bottomMargin">
-          <number>1</number>
+          <number>0</number>
          </property>
          <item>
-          <widget class="QLabel" name="label_Spacer">
-           <property name="text">
-            <string>TextLabel</string>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
            </property>
-          </widget>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>6</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_WindowIcon">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
            <property name="text">
-            <string>Icon</string>
+            <string/>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -100,7 +131,28 @@
           </widget>
          </item>
          <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>6</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <widget class="QLabel" name="label_WindowTitle">
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">color: rgb(185, 187, 190);</string>
            </property>
@@ -119,25 +171,27 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_Minimize{
   background-color:none;
   border:none;
+  image:url(:/Images/minimize.png);
+}
+
+#pushButton_Minimize:hover{
+  image:url(:/Images/minimize_hover.png);
+background-color: rgba(255, 255, 255, 35);
 }</string>
-           </property>
-           <property name="icon">
-            <iconset resource="framelesswindow.qrc">
-             <normaloff>:/Images/minimize.png</normaloff>:/Images/minimize.png</iconset>
            </property>
           </widget>
          </item>
@@ -151,28 +205,30 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_Maximize{
   background-color:none;
   border:none;
+  image:url(:/Images/maximize.png);
+}
+
+#pushButton_Maximize:hover{
+  image:url(:/Images/maximize_hover.png);
+background-color: rgba(255, 255, 255, 35);
 }</string>
            </property>
            <property name="text">
             <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="framelesswindow.qrc">
-             <normaloff>:/Images/maximize.png</normaloff>:/Images/maximize.png</iconset>
            </property>
           </widget>
          </item>
@@ -186,28 +242,29 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>20</width>
-             <height>20</height>
+             <width>28</width>
+             <height>22</height>
             </size>
            </property>
            <property name="styleSheet">
             <string notr="true">#pushButton_Exit{
   background-color:none;
   border:none;
+  image:url(:/Images/exit.png);
+}
+
+#pushButton_Exit:hover{
+  image:url(:/Images/exit_hover.png);
 }</string>
            </property>
            <property name="text">
             <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="framelesswindow.qrc">
-             <normaloff>:/Images/exit.png</normaloff>:/Images/exit.png</iconset>
            </property>
           </widget>
          </item>
@@ -248,8 +305,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="framelesswindow.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
