--- a/styles/white/qss.qss
+++ b/styles/white/qss.qss
@@ -4,8 +4,8 @@
 *	@author: 	chenwen(chenwen1126@tom.com)
 *	@datetime:  2017-7-25
 *	@history:   V1.0 first edition
-	@history:  slightly modified by reksotiv https://github.com/Reksotiv 
-	for https://github.com/FreeJoy-Team/FreeJoyConfiguratorQt
+*	@history:  slightly modified by reksotiv https://github.com/Reksotiv 
+*	for https://github.com/FreeJoy-Team/FreeJoyConfiguratorQt
 */
 
 /* CustomWidgets ----------------------------------------------------------------
@@ -53,7 +53,7 @@ QStatusBar
 QPushButton
 {
 	padding:0px 0px;/*??padding?0px ???6px {1,4}?????*/
-	width:40;
+	width:75;
 	height:20;
 	border: 1px solid #aaaaaa;/*??*/
 	background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #ffffff, stop:0.8 #eeeeee);/*?????*/
